# PardusBrowser

./: .dockerignore  Cargo.toml  Cargo.toml.bak  Dockerfile  README.md  ROADMAP.md
ai-agent/pardus-browser/src/agent/: Agent.ts
ai-agent/pardus-browser/src/core/: BrowserInstance.ts  types.ts
ai-agent/pardus-browser/src/llm/: client.ts  context.ts  prompts.ts
ai-agent/pardus-browser/src/tools/: executor.ts  types.ts
bench/: compare_bench.sh  run_bench.sh
bench/compare/: package.json  playwright.mjs  puppeteer.mjs
bench/site/: content-heavy.html  deep-nested.html  forms.html  index.html  interactive.html  nav-graph.html  realistic.html  scripts.html  semantic.html  simple.html  wide-dom.html
crates/pardus-cdp/: Cargo.toml
crates/pardus-cdp/src/: provider.rs  server.rs
crates/pardus-cdp/src/domain/: browser.rs  console.rs  css.rs  dom.rs  emulation.rs  input.rs  log.rs  mod.rs  network.rs  page.rs  pardus_ext.rs  performance.rs  runtime.rs  security.rs  target.rs
crates/pardus-cdp/src/protocol/: event_bus.rs  node_map.rs  router.rs  target.rs
crates/pardus-cdp/src/transport/: http.rs  ws.rs
crates/pardus-cdp/tests/: domain_context_test.rs
crates/pardus-cli/: Cargo.toml
crates/pardus-cli/src/: main.rs
crates/pardus-cli/src/commands/: interact.rs  mod.rs  repl.rs  serve.rs  session.rs  setup.rs  tab.rs
crates/pardus-core/: Cargo.toml
crates/pardus-core/src/: app.rs  config.rs  lib.rs  page.rs  session.rs
crates/pardus-core/src/cache/: disk_cache.rs  dom_cache.rs  mod.rs  resource_cache.rs
crates/pardus-core/src/http/: client.rs
crates/pardus-core/src/interact/: actions.rs  auto_fill.rs  element.rs  form.rs  js_interact.rs  mod.rs  scroll.rs  validation.rs  wait.rs
crates/pardus-core/src/intercept/: mod.rs
crates/pardus-core/src/js/: bootstrap.js  bootstrap_readonly.js  dom.rs  extension.rs  fetch.rs  mod.rs  ops.rs  runtime.rs  timer.rs
crates/pardus-core/src/navigation/: graph.rs
crates/pardus-core/src/output/: json_formatter.rs
crates/pardus-core/src/parser/: arena_dom.rs  lazy.rs  mod.rs  preload_scanner.rs  streaming.rs
crates/pardus-core/src/prefetch/: mod.rs  predictor.rs  prefetcher.rs
crates/pardus-core/src/push/: h2_push.rs
crates/pardus-core/src/resource/: fetcher.rs  mod.rs  pool.rs  priority.rs  scheduler.rs
crates/pardus-core/src/semantic/: tree.rs  tree.rs.bak
crates/pardus-core/src/tab/: manager.rs  mod.rs  tab.rs
crates/pardus-core/src/tls/: pinning.rs
crates/pardus-tauri/: package.json
crates/pardus-tauri/src/: events.ts  index.html  main.ts
crates/pardus-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/pardus-tauri/src-tauri/src/: browser_window.rs  challenge.rs  commands.rs  cookie_bridge.rs  instance.rs  lib.rs
patches/temporal_rs/src/: error.rs
patches/temporal_rs/src/builtins/core/: calendar.rs
