[package]
name = "pardus-tauri"
version.workspace = true
edition.workspace = true
description = "Tauri desktop app for Pardus Browser — agent launcher + CAPTCHA solver"

[lib]
name = "pardus_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }

tokio-tungstenite = "0.26"
futures-util = { workspace = true }

pardus-core = { path = "../../pardus-core" }
pardus-challenge = { path = "../../pardus-challenge" }
pardus-cdp = { path = "../../pardus-cdp" }

[features]
custom-protocol = ["tauri/custom-protocol"]
